[metadata]
name = networking-tn
summary = neutron plugin for tsinghuanet
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    networking_tn
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_tn.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    tn_migration = networking_tn.tools.migration:main
neutron.service_plugins =
    tn_router = networking_tn.services.l3_router.l3_tn:TNL3ServicePlugin
    tn_firewall = networking_tn.services.firewall.tn_fwaas_plugin:TNFirewallPlugin
neutron.db.alembic_migrations =
    networking-tn = networking_tn.db.migration:alembic_migrations
tempest.test_plugins =
    networking-tn = networking_tn.tests.tempest_plugin.plugin:NeutronFortigateFWaaSPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_tn/locale/networking-tn.pot

[compile_catalog]
directory = networking_tn/locale
domain = networking_tn

[update_catalog]
domain = networking-tn
output_dir = neutron_tn/locale
input_file = networking_tn/locale/networking-tn.pot

[wheel]
universal = 1
